...
                    </view>
                    <navigationItem key="navigationItem" title="All Tasks" id="GOT-gF-aWs">
                        <barButtonItem key="rightBarButtonItem" title="Item" image="right_add_detail" id="IIC-11-4mH">
                            <connections>
                                <segue destination="XEh-b9-b1c" kind="show" identifier="ShowAddCategorySegue" id="mAy-Jn-Oir"/>
...
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="hWf-XK-7fr">
                            <connections>
                                <action selector="doneAddCategory:" destination="XEh-b9-b1c" id="kz2-2s-K1O"/>
...
        <scene sceneID="lRp-E7-mad">
            <objects>
                <tableViewController storyboardIdentifier="AddTaskControllerId" title="Add Item" id="wiQ-GD-fJh" customClass="AddTaskController" customModule="TodoApp" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="P9u-o1-LaR">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
...
                        <barButtonItem key="leftBarButtonItem" title="Back" id="U74-ye-8em">
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="backId"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
...
                                        <rect key="frame" x="8" y="10" width="304" height="24"/>
                                        <segments>
                                            <segment title="Date"/>
                                            <segment title="Group"/>
                                        </segments>
                                        <connections>
...
                        <viewLayoutGuide key="safeArea" id="heM-pf-Gaj"/>
                    </view>
                    <navigationItem key="navigationItem" title="Inbox" id="h7q-D9-ObP">
                        <rightBarButtonItems>
                            <barButtonItem title="Item" image="right_add_detail" id="o0n-A8-1Ve">
...
                                        <rect key="frame" x="8" y="10" width="304" height="24"/>
                                        <segments>
                                            <segment title="Active Tasks"/>
                                            <segment title="Completed"/>
                                        </segments>
                                        <connections>
...
                        <viewLayoutGuide key="safeArea" id="C2W-Sb-cmD"/>
                    </view>
                    <navigationItem key="navigationItem" title="Search" id="aMQ-Uk-ONY"/>
                    <connections>
                        <outlet property="noResultView" destination="Ysc-Sm-kf0" id="RH7-4I-ete"/>
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="cgn-nk-Em4" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="ToDo" image="icon_ToDoList" selectedImage="icon_ToDoList_active" id="YWu-0N-UXS"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="C3t-O8-Enc">
...
