...
    }
    
    
    //MARK: - Private Methods
    
    private func setupSaveButton(){
        let taskName = categoryNameTextField.text ?? ""
        navigationItem.rightBarButtonItem?.isEnabled = !taskName.isEmpty
    }
    
    
    //MARK: - Actions
    
...
