...

import UIKit


fileprivate struct Const {
    
    static let searchBarPlaceholder = "Search Tasks"
    static let attributedTextBackgroundColor = UIColor.fromHexString("#FFFF00", alpha: 0.8)
    static let attributedTextForegrondColor = UIColor.black
    static let attributesForTextHighlighting = [
        NSAttributedStringKey.backgroundColor: Const.attributedTextBackgroundColor,
        NSAttributedStringKey.foregroundColor: Const.attributedTextForegrondColor
    ]
...
